--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react-redux": "^8.1.3",
     "react-router-dom": "^6.18.0",
     "uniqid": "^5.4.0",
+    "use-hooks": "^2.0.0-rc.5",
     "web-vitals": "^2.1.4"
   },
   "devDependencies": {
