--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@mui/icons-material": "^5.14.15",
     "@mui/material": "^5.14.13",
     "@reduxjs/toolkit": "^1.9.7",
+    "@uidotdev/usehooks": "^2.4.1",
     "notistack": "^3.0.1",
     "pokeapi-typescript": "^2.1.0",
     "react": "^18.2.0",
@@ -15,7 +16,6 @@
     "react-redux": "^8.1.3",
     "react-router-dom": "^6.18.0",
     "uniqid": "^5.4.0",
-    "use-hooks": "^2.0.0-rc.5",
     "web-vitals": "^2.1.4"
   },
   "devDependencies": {
